js/src/tests/test262/language/import/import-defer/errors/resolution-error/import-defer-of-missing-module-fails.js
asyncTest
(
async
(
)
=
>
{
globalThis
.
evaluated
=
false
;
try
{
await
import
(
"
.
/
main_FIXTURE
.
js
"
)
;
}
catch
{
assert
.
sameValue
(
globalThis
.
evaluated
false
"
The
module
should
not
be
evaluated
"
)
;
return
;
}
throw
new
Error
(
"
The
module
should
throw
"
)
;
}
)
